2008-02-27  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildInstallDefaultsPostinstall): Escape
	variable correcly, so the postinstall file contains contains the
	name, not the value.

2008-02-26  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildMakefileRunInstall): Remove call to
	`CygbuildDebianRules2MakefileMaybe'.
	(CygbuildDebianRules2MakefileMaybe): Remove.
	(CygbuildDebianRules2Makefile): Remove.
	(CygbuildMakefileRunInstall): Notify about missing makefile.
	(CygbuildInstallPackageDocs): Install also directories
	examples, example and sample.

	* bin/cygbuild.pl (DebianRulesInstalldirs): Remove.
	(DebianRulesInstall): Remove.
	(DebianRulesProcess): Remove.
	(DebianMakefile): Remove.
	(DebianRulesMain): Remove.
	(CygbuildInstallFixPermissions): Incorrect variable at the end.
	Use `readList'.
	(CygbuildMakefilePrefixCheck): Grep more files.
	(CygbuildMakefileRunInstallCygwinOptions): correct
	variable name verb to verbose.

2008-02-25  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildDefineGlobalScript): Use
	`CygbuildVersionInfo' instead of unreliable bash substitution
	code.
	(CygbuildDefineVersionVariables): Remove exit and return
	error code.
	(CygbuildDefineVersionVariables): Remove extra code from end.
	Die if `CygbuildDefineVersionVariables' fails.
	(CygbuildCmdInstallCheckBinFiles): Warn about .py and .pl
	exensions.
	(CygbuildDefineGlobalScript): Adjust SCRIPT_PKGVER.

2008-02-24  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildPod2man): Add --release to pod2man.
	(CygbuildCygcheckMain): Make sure slashes are correct.
	(CygbuildInstallPackageDocs): Streamline function. If there
	is no doc/ dir, still run the install if --include option is set.
	(CygbuildIsDirEmpty): Remove die call.
	(CygbuildFileConvertToUnix): Ignore *.rtf etc

2008-02-22  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (OPTIONAL EXTERNAL FILES::manualpage.1.pod):